--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "browserslist": {
     "production": [
@@ -28,5 +30,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^2.4.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.0"
   }
 }
