Create two files to contain the components for Pokemon List and Pokemon Detail.

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,11 +4,11 @@
   "htmlWhitespaceSensitivity": "css",
   "insertPragma": false,
   "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
+  "jsxSingleQuote": true,
   "printWidth": 80,
   "proseWrap": "preserve",
   "requirePragma": false,
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
